# actix-crud

./: Cargo.toml
migrations/2023-03-15-153440_create_tweets/: down.sql  up.sql
src/: main.rs  schema.rs
src/handlers/: tweets.rs
